feat(recoverPassword): Добавить восстановлении пароля
META: #89329
